syntax = "proto3";
package com.omniview.pluginsdk;

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "./proto";

// An item within a display layout.
message LayoutItem {
  string id = 1;
  string label = 2;
  string icon = 3;
  string description = 4;
  repeated LayoutItem items = 5;
}

message Layout {
  repeated LayoutItem items = 1;
}

message GetLayoutRequest {
  string id = 1;
}

message SetLayoutRequest {
  string id = 1;
  Layout layout = 2;
}
